# MFCC_VoicePrint144

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: app.py  config.py
tests/: conftest.py  test_api_extract.py  test_health_extractor.py
voiceprint_features_144/: __init__.py  biometric144.py  cli.py  common_adaptive.py  extract_health_matrix.py  extract_mfcc_matrix.py  mel144.py  mfcc144.py
