[project]
name = "voicewaves-features-144"
version = "0.1.0"
description = "Fixed 144D audio features (MFCC/Log-Mel) for voice biometrics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.24", "librosa>=0.10", "soundfile>=0.12"]

[project.scripts]
vw-extract = "voicewaves_features_144.cli:main"
